--- a/client/common.css
+++ b/client/common.css
@@ -3,7 +3,7 @@ body {
 }
 
 .header {
-    background-image: url('images/header.svg');
+    /* background-image: url('images/header.svg'); */
     background-size: contain;
     background-repeat: no-repeat;
     height: 55px;
