--- a/client/display.css
+++ b/client/display.css
@@ -1,6 +1,7 @@
 
 .main {
     width: 70%;
+    font-family: 'Roboto'
 }
 
 .top-players {
@@ -14,6 +15,14 @@
     margin-bottom: 30%;
     padding: 20px;
     box-sizing: border-box;
+}
+
+.intro .top-players {
+    display: none;
+}
+
+.intro .main {
+    width: 100%;
 }
 
 .top-players li {
